<resources>
    <string name="app_name">Color Picker</string>
    <string name="add">+</string>
    <string name="min">-</string>
    <string name="num">0</string>
    <string name="visit_me">Visit me</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <color name="white">#FFFFFF</color>
</resources>
