<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mConstraintLayoutBase"
    android:background="#000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@drawable/base_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/mTextViewR1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:id="@+id/mTextViewR2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:id="@+id/mTextViewG1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:id="@+id/mTextViewG2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:id="@+id/mTextViewB1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
        <TextView
            android:id="@+id/mTextViewB2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/num"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="@dimen/textSize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLinearLayoutAdd"
        android:layout_width="600dp"
        android:layout_height="90dp"
        android:layout_marginTop="95dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <Button
            android:id="@+id/mButtonAddR1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonAddR2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_untouch"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            style="@style/Widget.AppCompat.Button.Borderless" />
        <Button
            android:id="@+id/mButtonAddG1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonAddG2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonAddB1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonAddB2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLinearLayoutMin"
        android:layout_width="600dp"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:layout_marginBottom="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/mButtonMinR1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonMinR2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_untouch"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonMinG1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonMinG2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonMinB1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/mButtonMinB2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/min"
            android:textSize="@dimen/textSize"
            android:background="@drawable/button_bg_untouch"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>

    <Button
        android:id="@+id/mButtonInfo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="0dp"
        android:background="@drawable/ic_info"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mButtonReset"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_reset"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>